# 2048sort

./: CMakeLists.txt  main.cpp  order.hpp
